feat: 外部APIへのフェッチを実装する

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,5 @@ services:
     container_name: face_recognition_app
     devices:
       - "/dev/video0:/dev/video0"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
